# examples

./: .gitignore
assets/: demo.mov
python/: README.md  makefile  pyproject.toml
python/chatbot/: .env.example  main.py  open_ai.py
python/chatbot/custom/: __init__.py
python/chatbot/huddle/: __init__.py  huddle_room.py
python/conferencing/: audio_from_room.py  constants.py  main.py  sound_device.py  transciption.py  transcribe.py
python/conferencing/custom/: bot_audio_track.py
python/conferencing/huddle/: huddle_room.py
